Change support to Java 8