@@ -1,5 +1,7 @@
 package com.grim3212.assorted.tech.common.block.blockentity;
 
+import java.util.stream.Collectors;
+
 import com.google.common.collect.Sets;
 import com.grim3212.assorted.tech.AssortedTech;
 import com.grim3212.assorted.tech.common.block.TechBlocks;
@@ -13,7 +15,7 @@ public class TechBlockEntityTypes {
 
 	public static final DeferredRegister<TileEntityType<?>> BLOCK_ENTITIES = DeferredRegister.create(ForgeRegistries.TILE_ENTITIES, AssortedTech.MODID);
 
-	public static final RegistryObject<TileEntityType<SensorBlockEntity>> SENSOR = BLOCK_ENTITIES.register("sensor", () -> new TileEntityType<>(SensorBlockEntity::new, Sets.newHashSet(TechBlocks.SENSORS.stream().map(b -> b.get()).toList()), null));
+	public static final RegistryObject<TileEntityType<SensorBlockEntity>> SENSOR = BLOCK_ENTITIES.register("sensor", () -> new TileEntityType<>(SensorBlockEntity::new, Sets.newHashSet(TechBlocks.SENSORS.stream().map(b -> b.get()).collect(Collectors.toList())), null));
 	public static final RegistryObject<TileEntityType<FanBlockEntity>> FAN = BLOCK_ENTITIES.register("fan", () -> new TileEntityType<>(FanBlockEntity::new, Sets.newHashSet(TechBlocks.FAN.get()), null));
 
 }
